# biscuit-rust

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: codspeed.yml  release.yml  rust.yml
biscuit-auth/: CHANGELOG.md  Cargo.toml  build.rs
biscuit-auth/benches/: token.rs
biscuit-auth/examples/: printer.rs  testcases.rs  third_party.rs  verifying_printer.rs
biscuit-auth/samples/: README.md  samples.json
biscuit-auth/src/: bwk.rs  error.rs  lib.rs  macros.rs  parser.rs  time.rs
biscuit-auth/src/crypto/: ed25519.rs  mod.rs  p256.rs
biscuit-auth/src/datalog/: expression.rs  mod.rs  origin.rs  symbol.rs
biscuit-auth/src/format/: convert.rs  mod.rs  schema.proto  schema.rs
biscuit-auth/src/token/: authorizer.rs  block.rs  builder.rs  builder_ext.rs  mod.rs  public_keys.rs  third_party.rs  unverified.rs
biscuit-auth/src/token/authorizer/: snapshot.rs
biscuit-auth/src/token/builder/: algorithm.rs  authorizer.rs  biscuit.rs  block.rs  check.rs  expression.rs  fact.rs  policy.rs  predicate.rs  rule.rs  scope.rs  term.rs
biscuit-auth/tests/: macros.rs  rights.rs
biscuit-capi/: Cargo.toml  README.md  cbindgen.toml
biscuit-capi/src/: lib.rs
biscuit-capi/tests/: capi.rs
biscuit-parser/: CHANGELOG.md  Cargo.toml
biscuit-parser/src/: builder.rs  error.rs  lib.rs  parser.rs
biscuit-quote/: CHANGELOG.md  Cargo.toml
biscuit-quote/src/: lib.rs
