[package]
name = "biscuit-capi"
version = "6.0.0-beta.3"                                     # Should keep the same version as biscuit-auth
description = "C API for Biscuit"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/biscuit-auth"
homepage = "https://github.com/biscuit-auth/biscuit"
repository = "https://github.com/biscuit-auth/biscuit-rust"

[features]
capi = []

[dependencies]
biscuit-auth = { version = "6.0.0-beta.3", path = "../biscuit-auth", features = [
    "datalog-macro",
    "serde-error",
    "pem",
] }
libc = "0.2"
rand = "0.8"

[dev-dependencies]
inline-c = "0.1"

[package.metadata.capi.library]
# Used as the library name and defaults to the crate name. This might get
# prefixed with `lib` depending on the target platform.
name = "biscuit_auth"

[package.metadata.capi.header]
name = "biscuit_auth"

[[test]]
name = "capi"
required-features = ["capi"]
path = "tests/capi.rs"
